# ESPLogger

./: CMakeLists.txt  README.md  TODO  get_coredump.sh  partitions_example.csv  sdkconfig  sdkconfig.old
front/webapp/: index.html  package.json  vite.config.js
front/webapp/src/: App.vue  main.js
front/webapp/src/assets/: main.css
front/webapp/src/router/: index.js
front/webapp/src/views/: About.vue  Config.vue  Home.vue
main/: CMakeLists.txt  ESP32_SHT1x.cpp  ESP32_SHT1x.h  Kconfig.projbuild  applogger.cpp  applogger.h  bme280.c  cbme280_sensor.cpp  cbme280_sensor.h  config_manager.cpp  config_manager.h  config_manager_defines.h  csensor.h  hm3300_sensor.cpp  hm3300_sensor.h  infomanager.cpp  main.cpp  mqtt_manager.cpp  mqtt_manager.h  ota_manager.cpp  ota_manager.h  rest_server.cpp  sensor_config.h  sensor_manager.cpp  sensor_manager.h  vindriktning.cpp  vindriktning.h
